--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [PluginBrowser]
@@ -207,7 +207,7 @@ ContentBrowserTab1.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=204.000
-WindowSize=X=1276.000 Y=722.000
+WindowSize=X=1277.600 Y=723.200
 InitiallyMaximized=True
 
 [Directories2]
