--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,6 +166,10 @@ LastLevel=/Game/Monica/Test_Map_Fish
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -174,10 +178,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Monica/Fish/red_fish.red_fish
-OpenAssetsAtExit=/Game/Monica/Fish/M_RedFish.M_RedFish
-OpenAssetsAtExit=/Game/Monica/Fish/Outline.Outline
-OpenAssetsAtExit=/Game/Monica/Fish/Fish_2D_Mat.Fish_2D_Mat
 OpenAssetsAtExit=/Game/Monica/Fish/NS_FishGM2.NS_FishGM2
 
 [PluginBrowser]
@@ -1537,20 +1537,32 @@ Texture2DArray="\"Object\" "
 MaterialExpressionDesaturation="\"Object\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Monica/Fish/NS_FishGM2
-MRUItem1=/Game/Monica/Fish/Fish_2D_Mat
-MRUItem2=/Game/Monica/Fish/Outline
-MRUItem3=/Game/Monica/Fish/NS_FishGM1
-MRUItem4=/Game/Monica/Fish/M_RedFish
-MRUItem5=/Game/Monica/Fish/NS_FishGM
-MRUItem6=/Game/Monica/Fish/red_fish
-MRUItem7=/Game/Monica/Fish/fish_text
+MRUItem0=/Game/Monica/Fish/green_pink_fish
+MRUItem1=/Game/Monica/Fish/M_GreenPinkFish1
+MRUItem2=/Game/Monica/Fish/yellow_fish
+MRUItem3=/Game/Monica/Fish/M_YellowFish
+MRUItem4=/Game/Monica/Fish/NS_FishGM2
+MRUItem5=/Game/Monica/Fish/Fish_2D_Mat
+MRUItem6=/Game/Monica/Fish/Outline
+MRUItem7=/Game/Monica/Fish/NS_FishGM1
+MRUItem8=/Game/Monica/Fish/M_RedFish
+MRUItem9=/Game/Monica/Fish/NS_FishGM
+MRUItem10=/Game/Monica/Fish/red_fish
+MRUItem11=/Game/Monica/Fish/fish_text
 
 [AssetEditorToolkitTabLocation]
 /Game/Monica/Fish/NS_FishGM.NS_FishGM=0
 /Game/Monica/Fish/fish_text.fish_text=0
 /Game/Monica/Fish/NewTexture2DArray.NewTexture2DArray=0
 /Game/Monica/Fish/NS_FishGM1.NS_FishGM1=0
+/Game/Monica/Fish/M_GreenPinkFish1.M_GreenPinkFish1=0
+/Game/Monica/Fish/yellow_fish.yellow_fish=0
+/Game/Monica/Fish/M_YellowFish.M_YellowFish=0
+/Game/Monica/Fish/green_pink_fish.green_pink_fish=0
+/Game/Monica/Fish/Fish_2D_Mat.Fish_2D_Mat=0
+/Game/Monica/Fish/Outline.Outline=0
+/Game/Monica/Fish/M_RedFish.M_RedFish=0
+/Game/Monica/Fish/red_fish.red_fish=0
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1825,10 +1837,179 @@ RecentlyPlaced=/Game/Monica/Fish/NS_FishGM.NS_FishGM;
 [MRU]
 MRUItem0=/Game/Monica/Test_Map_Fish
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
 [DetailCustomWidgetExpansion]
 StaticMesh=StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Mesh
-MeshNaniteSettings=StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Mesh
+MeshNaniteSettings=
 
 [DetailCategoriesAdvanced]
 StaticMesh.Collision=True
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bPlatformUsed[152]=0
+bPlatformUsed[153]=0
+bPlatformUsed[154]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
