--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,13 +164,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Liam/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Liam/Material/M_Shader.M_Shader
 
 [PluginBrowser]
 InstalledPlugins=AutoSizeComments
