Merge_Main to Monica

--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,12 +174,13 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Liam/Material/M_Shader.M_Shader
 
 [PluginBrowser]
-InstalledPlugins=AutoSizeComments
-InstalledPlugins=FlatNodes
-InstalledPlugins=NodeGraphAssistant
+InstalledPlugins=AlterMesh
+InstalledPlugins=GolaemPlugin
+InstalledPlugins=HoudiniEngine
+InstalledPlugins=InteractiveWorld
+InstalledPlugins=MetaHuman
 InstalledPlugins=WMFCodecs
 
 [SlateAdditionalLayoutConfig]
@@ -208,7 +209,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Liam/Material/Texture
+ContentBrowserTab1.SelectedPaths=/Game/Monica
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -287,10 +288,29 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+TakesBrowser.SourcesExpanded=True
+TakesBrowser.FavoritesAreaExpanded=False
+TakesBrowser.PathAreaExpanded=True
+TakesBrowser.CollectionAreaExpanded=False
+TakesBrowser.FavoritesSearchAreaExpanded=False
+TakesBrowser.PathSearchAreaExpanded=False
+TakesBrowser.CollectionSearchAreaExpanded=False
+TakesBrowser.VerticalSplitter.SlotSize0=0.150000006
+TakesBrowser.VerticalSplitter.SlotSize1=0.75
+TakesBrowser.FavoriteSplitter.SlotSize0=0.200000003
+TakesBrowser.FavoriteSplitter.SlotSize1=0.800000012
+TakesBrowser.FavoriteSplitter.SlotSize2=0.400000006
+TakesBrowser.SelectedPaths=/Game/Monica/Fish
+TakesBrowser.PluginFilters=
+TakesBrowser.Favorites.SelectedPaths=
+TakesBrowser.SelectedCollections=
+TakesBrowser.ExpandedCollections=
+TakesBrowser.ThumbnailSize=2
+TakesBrowser.CurrentViewType=1
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=30.000
-WindowSize=X=1276.000 Y=738.000
+ScreenPosition=X=0.000 Y=29.600
+WindowSize=X=1277.600 Y=739.200
 InitiallyMaximized=True
 
 [Directories2]
@@ -1056,10 +1076,10 @@ ObjectMixerEditor.TimeStamp=2024.04.08-13.29.52
 ObjectMixerEditor.LastCompileMethod=Unknown
 LightMixer.TimeStamp=2024.04.08-13.29.52
 LightMixer.LastCompileMethod=Unknown
-Bridge.TimeStamp=2024.04.08-13.48.38
-Bridge.LastCompileMethod=Unknown
-MegascansPlugin.TimeStamp=2024.04.08-13.48.39
-MegascansPlugin.LastCompileMethod=Unknown
+Bridge.TimeStamp=2024.04.10-14.38.12
+Bridge.LastCompileMethod=External
+MegascansPlugin.TimeStamp=2024.04.10-14.38.36
+MegascansPlugin.LastCompileMethod=External
 TakesCore.TimeStamp=2024.04.08-13.34.38
 TakesCore.LastCompileMethod=Unknown
 TakeTrackRecorders.TimeStamp=2024.04.08-13.34.38
@@ -1388,9 +1408,16 @@ ExternalImagePicker.TimeStamp=2024.04.08-13.26.50
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2024.04.08-13.26.55
 TextureEditor.LastCompileMethod=Unknown
+HoudiniEngine.TimeStamp=2023.11.26-00.33.39
+HoudiniEngine.LastCompileMethod=Unknown
+HoudiniEngineRuntime.TimeStamp=2023.11.26-00.33.39
+HoudiniEngineRuntime.LastCompileMethod=Unknown
+HoudiniEngineEditor.TimeStamp=2023.11.26-00.33.39
+HoudiniEngineEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailPropertyExpansion]
