--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/Engine.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/Engine.ini
@@ -46,6 +46,7 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Marketplace/FlatNodes/Content
+Paths=../../../Engine/Plugins/HoudiniEngine/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
