--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Camille/Map_Test_Camille
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
@@ -175,7 +175,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/Camille/WB_ButtonInterface.WB_ButtonInterface
@@ -232,7 +231,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Camille
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -274,8 +273,8 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=240.800 Y=179.200
-WindowSize=X=1293.600 Y=739.200
+ScreenPosition=X=236.000 Y=87.200
+WindowSize=X=1295.200 Y=740.800
 InitiallyMaximized=True
 
 [Directories2]
@@ -284,7 +283,7 @@ BRUSH=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 FBX=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 FBXAnim=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 GenericImport=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
-GenericExport=../../../../../../Users/ATI/Documents/MIP Laval/m_med_nrw_body.FBX
+GenericExport=../../../../../../Users/ATI/Documents/MIP Laval/SKM_Manny_Simple.FBX
 GenericOpen=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 GenericSave=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 MeshImportExport=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
@@ -1567,6 +1566,8 @@ TextureEditor.TimeStamp=2024.04.05-15.07.39
 TextureEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2024.04.05-15.07.35
 ExternalImagePicker.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.04.05-15.07.38
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2447,6 +2448,7 @@ RecentlyPlaced=/Game/MetaHumans/Bryan/Male/Medium/NormalWeight/Body/m_med_nrw_bo
 /Game/Camille/NewInputMappingContext.NewInputMappingContext=1
 /Game/Camille/SetColor2.SetColor2=1
 /Game/Camille/Buttons/T_Button_blue.T_Button_blue=0
+/Game/Camille/WB_ButtonInterface.WB_ButtonInterface=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2576,7 +2578,7 @@ LastLogListing=PIE
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset=
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" "
 OWLSpoutSenderManager="\"Object.Off World Live Spout Sender Settings.SpoutSenders\" \"Object.Off World Live Spout Sender Settings.SpoutSenders.SpoutSenders[0]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Triggers\" "
@@ -2911,6 +2913,21 @@ GeneralProjectSettings=True
 InputSettings=True
 EnhancedInputEditorProjectSettings=True
 EnhancedInputDeveloperSettings=True
+
+[WidgetTemplatesExpanded]
+Common=False
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
