push liam repare ?

--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/Liam/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -184,7 +184,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Liam/Material/NS_Smoke_FX.NS_Smoke_FX
 
 [PluginBrowser]
 InstalledPlugins=AutoSizeComments
@@ -300,7 +299,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=30.000
-WindowSize=X=1276.000 Y=738.000
+WindowSize=X=1276.000 Y=740.000
 InitiallyMaximized=True
 
 [Directories2]
