--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,16 +164,21 @@ RotGridEnabled=False
 SnapScaleEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Liam/NewMap
+LastLevel=/Game/Monica/Test_Map_Fish
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=Niagara
+RecentAssetEditors=Niagara
+RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/Monica/Fish/NS_FishGMTestTarget.NS_FishGMTestTarget
+OpenAssetsAtExit=/Game/Liam/Material/NS_Test_FX_lookup.NS_Test_FX_lookup
 
 [PluginBrowser]
 InstalledPlugins=AlterMesh
@@ -209,7 +214,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Monica
+ContentBrowserTab1.SelectedPaths=/Game/Monica/Fish
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -310,11 +315,11 @@ TakesBrowser.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=29.600
-WindowSize=X=1277.600 Y=739.200
+WindowSize=X=1279.200 Y=740.800
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/rosar/Documents/GitHub/MIP_Laval/Unreal Projects/MIP_Laval/Content/Liam
+UNR=../../../../MIP_Laval/Unreal Projects/MIP_Laval/Content/Monica
 BRUSH=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 FBX=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
 FBXAnim=../../../../../../Users/rosar/Documents/Unreal Projects/MIP_Laval/Content/
@@ -2340,6 +2345,7 @@ PostProcessVolume.Networking=True
 PostProcessVolume.Actor=True
 PostProcessVolume.LevelInstance=True
 PostProcessVolume.Cooking=True
+NiagaraSystem.NiagaraSystem_UserParameters=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2370,15 +2376,19 @@ EditorPerformanceProjectSettings=True
 IOSRuntimeSettings=True
 
 [MRU]
-MRUItem0=/Game/Liam/NewMap
-MRUItem1=/Game/NewMap
+MRUItem0=/Game/Monica/Test_Map_Fish
+MRUItem1=/Game/Liam/NewMap
+MRUItem2=/Game/NewMap
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Liam/Material/Texture/T_Toon_water2
-MRUItem1=/Game/Liam/Material/M_Shader
-MRUItem2=/Game/Liam/Material/M_Foam
-MRUItem3=/Game/Liam/NewMap
-MRUItem4=/Game/VFXtexturePack/VFXtexturePack/TX_Noise_21
+MRUItem0=/Game/Liam/Material/NS_Test_FX_lookup
+MRUItem1=/Game/Monica/Fish/NS_FishGMTestTarget
+MRUItem2=/Game/Monica/Test_Map_Fish
+MRUItem3=/Game/Liam/Material/Texture/T_Toon_water2
+MRUItem4=/Game/Liam/Material/M_Shader
+MRUItem5=/Game/Liam/Material/M_Foam
+MRUItem6=/Game/Liam/NewMap
+MRUItem7=/Game/VFXtexturePack/VFXtexturePack/TX_Noise_21
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -2576,6 +2586,8 @@ Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 /Game/Liam/Material/T_Toon_water2.T_Toon_water2=1
 /Game/VFXtexturePack/VFXtexturePack/TX_Noise_21.TX_Noise_21=1
 /Game/Liam/Material/M_Foam.M_Foam=0
+/Game/Monica/Fish/NS_FishGMTestTarget.NS_FishGMTestTarget=0
+/Game/Liam/Material/NS_Test_FX_lookup.NS_Test_FX_lookup=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
