--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,9 +166,11 @@ SnapScaleEnabled=False
 LastLevel=/Game/Liam/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=StaticMeshEditor
@@ -184,6 +186,9 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/Liam/NewMap.NewMap:PersistentLevel.NewMap
+OpenAssetsAtExit=/Game/Liam/Material/M_Waterfall.M_Waterfall
+OpenAssetsAtExit=/Game/Liam/Material/MPC01.MPC01
 
 [PluginBrowser]
 InstalledPlugins=AutoSizeComments
@@ -241,7 +246,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Liam/Material
+ContentBrowserDrawer.SelectedPaths=/Game/Liam/Material/Texture
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1425,7 +1430,8 @@ Brush="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.Pos
 SceneCapture2D="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.HiddenActors\" "
 SceneCapture="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.HiddenActors\" "
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" \"Object.DefaultValue\" "
-MaterialExpression="\"Object.ParamNames\" \"Object.DefaultValue\" "
+MaterialExpression=
+MaterialParameterCollection="\"Object.Material.VectorParameters\" \"Object.Material.VectorParameters.VectorParameters[0]\" \"Object.Material.VectorParameters.VectorParameters[1]\" "
 
 [DetailCategories]
 EditorStyleSettings.Theme=True
@@ -2430,6 +2436,29 @@ WorldSettings.Nanite=True
 WorldSettings.Audio=True
 WorldSettings.Tick=True
 WorldSettings.Networking=True
+MidiControl_C.Default=True
+MidiControl_C.Tick=True
+MidiControl_C.Replication=True
+MidiControl_C.Rendering=True
+MidiControl_C.Collision=True
+MidiControl_C.Actor=True
+MidiControl_C.Input=True
+MidiControl_C.HLOD=True
+MidiControl_C.Physics=True
+MidiControl_C.WorldPartition=True
+MidiControl_C.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+MaterialParameterCollection.Material=True
+MaterialExpressionCollectionParameter.General=True
+MaterialExpressionCollectionParameter.MaterialExpression=True
+NewMap_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2464,22 +2493,24 @@ MRUItem0=/Game/Liam/NewMap
 MRUItem1=/Game/NewMap
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Liam/Material/M_Waterfall
-MRUItem1=/Game/Liam/Material/M_Smoke
-MRUItem2=/Game/Liam/Material/NS_Smoke_FX
-MRUItem3=/Game/Liam/Material/Smoke
-MRUItem4=/Game/Liam/Material/M_maskBack_waterfall
-MRUItem5=/Game/Characters/Mannequins/Animations/Manny/MM_Jump
-MRUItem6=/Game/Characters/Mannequins/Animations/Manny/MM_Land
-MRUItem7=/Game/Characters/Mannequins/Rigs/Poses/Manny/Manny_upperarm_l_anim
-MRUItem8=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem9=/Game/Characters/Mannequins/Rigs/Poses/Manny/Manny_foot_r_anim
-MRUItem10=/Game/Liam/Material/Texture/RT_watersahder
-MRUItem11=/Game/Liam/Material/NS_Test_FX_lookup
-MRUItem12=/Game/Liam/Material/Texture/T_Toon_water2
-MRUItem13=/Game/Liam/Material/M_Foam
-MRUItem14=/Game/Liam/NewMap
-MRUItem15=/Game/VFXtexturePack/VFXtexturePack/TX_Noise_21
+MRUItem0=/Game/Liam/Material/MPC01
+MRUItem1=/Game/Liam/Material/M_Waterfall
+MRUItem2=/Game/Camille/MidiControl
+MRUItem3=/Game/Liam/Material/M_Smoke
+MRUItem4=/Game/Liam/Material/NS_Smoke_FX
+MRUItem5=/Game/Liam/Material/Smoke
+MRUItem6=/Game/Liam/Material/M_maskBack_waterfall
+MRUItem7=/Game/Characters/Mannequins/Animations/Manny/MM_Jump
+MRUItem8=/Game/Characters/Mannequins/Animations/Manny/MM_Land
+MRUItem9=/Game/Characters/Mannequins/Rigs/Poses/Manny/Manny_upperarm_l_anim
+MRUItem10=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem11=/Game/Characters/Mannequins/Rigs/Poses/Manny/Manny_foot_r_anim
+MRUItem12=/Game/Liam/Material/Texture/RT_watersahder
+MRUItem13=/Game/Liam/Material/NS_Test_FX_lookup
+MRUItem14=/Game/Liam/Material/Texture/T_Toon_water2
+MRUItem15=/Game/Liam/Material/M_Foam
+MRUItem16=/Game/Liam/NewMap
+MRUItem17=/Game/VFXtexturePack/VFXtexturePack/TX_Noise_21
 
 [PlacementMode]
 RecentlyPlaced=/Game/Liam/Material/NS_Smoke_FX.NS_Smoke_FX;
@@ -2562,6 +2593,10 @@ SceneCapture2D=StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collis
 CapsuleComponent=
 Actor=StaticMeshActor.Physics.ConstraintsGroup
 PlayerStart=StaticMeshActor.Physics.ConstraintsGroup
+K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.Physics.ConstraintsGroup
+NewMap_C=StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.Physics.ConstraintsGroup
+PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.Physics.ConstraintsGroup
+K2Node_InputKey=StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.Physics.ConstraintsGroup
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericMaterialPipeline]
 bImportMaterials=True
@@ -2695,6 +2730,7 @@ Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 /Game/Liam/NewMap.NewMap:PersistentLevel.NewMap=0
 /Game/Characters/Mannequins/Animations/Manny/MM_Jump.MM_Jump=0
 /Game/Liam/Material/M_Smoke.M_Smoke=0
+/Game/Camille/MidiControl.MidiControl=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2882,6 +2918,7 @@ FbxImportUI.Miscellaneous=True
 AutoSaveMaxBackups=10
 AutoSaveMethod=BackupAndRestore
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="*_Ingested/*")))
 bForceCompilationAtStartup=False
 RestoreOpenAssetTabsOnRestart=AlwaysPrompt
 bMonitorContentDirectories=True
@@ -3070,8 +3107,16 @@ GraphEditorQuickJumps=()
 
 [ColorThemes]
 Theme0=New Theme
-Theme0Color0=(R=197.575211,G=0.562500,B=0.899306,A=1.000000)
+Theme0Color0=(R=0.000000,G=0.000000,B=1.000000,A=1.000000)
 Theme0Label0=
-Theme0Color1=(R=0.000000,G=0.000000,B=1.000000,A=1.000000)
+Theme0Color1=(R=197.575211,G=0.562500,B=0.899306,A=1.000000)
 Theme0Label1=
+Theme0Color2=(R=205.705017,G=0.892361,B=0.072917,A=1.000000)
+Theme0Label2=
+Theme0Color3=(R=200.920410,G=1.000000,B=1.000000,A=1.000000)
+Theme0Label3=
+Theme0Color4=(R=203.798737,G=0.156250,B=1.000000,A=1.000000)
+Theme0Label4=
+Theme0Color5=(R=197.575211,G=0.562500,B=0.899306,A=1.000000)
+Theme0Label5=
 
