--- a/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MIP_Laval/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/Liam/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=Niagara
 RecentAssetEditors=Niagara
@@ -191,12 +191,11 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Monica/Fish/NS_FishLookUp.NS_FishLookUp
 
 [PluginBrowser]
 InstalledPlugins=AlterMesh
-InstalledPlugins=HoudiniEngine
 InstalledPlugins=GolaemPlugin
+InstalledPlugins=HoudiniEngine
 InstalledPlugins=InteractiveWorld
 InstalledPlugins=MetaHuman
 InstalledPlugins=WMFCodecs
